fix bonus with validation changes

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     </head>
     <body ng-controller="scoreController as ctl">
        
-        <div class="container" id="content">
+        <div class="container" id="content" ng-cloak>
 
            <ng-form>
           
@@ -65,7 +65,7 @@
                       </div>
                       <div class="panel-footer" ng-if="ctl.showResult">
                         <div class="alert alert-success" role="alert">
-                         Congratulations! Your final score is <span ng-bind="ctl.score"></span>!
+                         Congratulations! Your final score is <span ng-bind="ctl.total"></span>!
                         </div>
                       </div>
                     </div>
